# tidal_tails

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindGLEW.cmake  FindOpenGL.cmake  copyright.txt
include/: sdl_guard.h
include/capture/: logger.h  record.h  screenshot.h
include/physics/: particle.h  system.h  universe.h
include/utilities/: camera.h  sdl_guard.h  utilities.h
misc/: colour.cpp  screenshot.cpp  test.cc
report/: compreport.aux  compreport.blg  compreport.run.xml  compreport.tex
src/: main.cpp
src/capture/: logger.cpp  screenshot.cpp
src/physics/: particle.cpp  system.cpp  universe.cpp
src/utilities/: camera.cpp  utilities.cpp
